Make `CoffeeMachineTests`'s local variables constant in exercise 2.